feat: autenticação e bicicletas

--- a/paraibike/src/app/components/locador/cadastro-locador/cadastro-locador.component.html
+++ b/paraibike/src/app/components/locador/cadastro-locador/cadastro-locador.component.html
@@ -1,48 +1,38 @@
-<div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-10" id="card">
-                <div class="card">
-                    <div class="card-header" id="header">
-                        <h4 class="card-title">Cadastro</h4>
-                    </div>
-                    <div class="card-body">
-  
-                        <form [formGroup]="formulario">
-  
-                          <input type="hidden" formControlName="idUsuario" />
-                          
-                            <div class="row">
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Nome" type="text" formControlName="nome">
-                                  </mat-form-field>
-                                </div>
-  
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Email" type="text" formControlName="email">
-                                  </mat-form-field>
-                                </div>
-                            </div>
-  
-                            <div class="row">
-                                <div class="col-md-12">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Senha" type="text" formControlName="senha">
-                                  </mat-form-field>
-                                </div>
-                            </div>
-  
-                            
-                        </form>
-  
-                        <button mat-raised-button type="submit" class="btn btn-sm pull-right" id="salvar" [disabled]="!formulario.valid" (click)="enviar()">Salvar</button>
-                        <button mat-raised-button type="submit"  [routerLink]="['']" class="btn btn-sm pull-right" id="cancelar">Cancelar</button>
-                    </div>
-                </div>
-            </div>
+  <body>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <mat-card class="example-card">
+                <mat-card-header>
+                  <mat-card-title>Sign up with</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>      
+                    <div class="d-flex align-items-center justify-content-center mt-4 mb-5">
+                        <!-- <ng-md-icon icon="github-circle" size="20"></ng-md-icon> -->
+                        <i class="fas fa-user"></i>
+                        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+                        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+                    </div>  
+                    <hr/>    
+                    <form class="example-form" [formGroup]="formulario">
+                        <div class="input-group input-group-sm mb-3 mt-4 input-color">
+                          <input type="email" class="form-control" placeholder="Nome" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="name">
+                        </div>
+                        <div class="input-group input-group-sm mb-3 mt-4 input-color">
+                          <input type="email" class="form-control" placeholder="Nome de usuário" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="username">
+                        </div>
+                        <div class="input-group input-group-sm mb-3 mt-4 input-color">
+                            <input type="email" class="form-control" placeholder="Email" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="email">
+                        </div>
+                        <div class="input-group input-group-sm mb-3 input-color">
+                            <input type="password" class="form-control" placeholder="Senha" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="password"> 
+                        </div>
+                        <div class="input-group input-group-sm mb-3 mt-4 input-color">
+                          <input type="email" class="form-control" placeholder="Confirmação de senha" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="password_confirmation">
+                      </div>
+                        <button type="submit" class="login p-2" (click)="enviar()" [disabled]="!formulario.valid">Criar conta</button>
+                    </form>
+                </mat-card-content>
+              </mat-card>
         </div>
     </div>
-  </div>
-  
+</body>
