--- a/paraibike/src/app/components/login/enter/enter.component.scss
+++ b/paraibike/src/app/components/login/enter/enter.component.scss
@@ -34,3 +34,10 @@ input.form-control{
     height: 46px;
 }
 
+.criarConta{
+    border-color: beige;
+    border-radius: 3rem;
+    font-size: 0.8rem;
+    margin-top: 1rem;
+    margin-left: 9rem;
+}
