--- a/paraibike/src/app/components/locador/cadastro-locador/cadastro-locador.component.html
+++ b/paraibike/src/app/components/locador/cadastro-locador/cadastro-locador.component.html
@@ -3,7 +3,7 @@
         <div class="row justify-content-md-center">
             <mat-card class="example-card">
                 <mat-card-header>
-                  <mat-card-title>Sign up with</mat-card-title>
+                  <mat-card-title>Cadastro</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>      
                     <div class="d-flex align-items-center justify-content-center mt-4 mb-5">
@@ -15,7 +15,8 @@
                     <hr/>    
                     <form class="example-form" [formGroup]="formulario">
                         <div class="input-group input-group-sm mb-3 mt-4 input-color">
-                          <input type="text" class="form-control" placeholder="Nome" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="name">
+                          <input type="text" class="form-control" placeholder="Nome" id="name" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" 
+                          formControlName="name" required>
                         </div>
                         <div class="input-group input-group-sm mb-3 mt-4 input-color">
                           <input type="text" class="form-control" placeholder="Nome de usuário" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="username">
@@ -29,7 +30,8 @@
                         <div class="input-group input-group-sm mb-3 mt-4 input-color">
                           <input type="password" class="form-control" placeholder="Confirmação de senha" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="password_confirmation">
                       </div>
-                        <button type="submit" class="login p-2" (click)="enviar()" [disabled]="!formulario.valid">Criar conta</button>
+                        <!-- <button type="submit" class="login p-2" (click)="enviar()" [disabled]="!formulario.valid">Criar conta</button> -->
+                        <button type="submit" class="login p-2" (click)="enviar()">Criar conta</button>
                     </form>
                 </mat-card-content>
               </mat-card>
