--- a/paraibike/src/app/components/login/enter/enter.component.html
+++ b/paraibike/src/app/components/login/enter/enter.component.html
@@ -3,7 +3,7 @@
         <div class="row justify-content-md-center">
             <mat-card class="example-card">
                 <mat-card-header>
-                  <mat-card-title>Login with</mat-card-title>
+                  <mat-card-title>Login</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>      
                     <div class="d-flex align-items-center justify-content-center mt-4 mb-5">
@@ -22,7 +22,7 @@
                             <input type="password" class="form-control" placeholder="Password" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="password"> 
                         </div>
                         <button type="submit" class="login p-2" (click)="enviar()">LOGIN</button>
-                        <p class="mt-4"> Looking to create an account ?</p>
+                        <button (click)="criarConta()" class="criarConta">Looking to create an account ? </button>
                     </form>
                 </mat-card-content>
               </mat-card>
