--- a/paraibike/src/app/components/locador/cadastro-locador/cadastro-locador.component.html
+++ b/paraibike/src/app/components/locador/cadastro-locador/cadastro-locador.component.html
@@ -31,7 +31,7 @@
                           <input type="password" class="form-control" placeholder="Confirmação de senha" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="password_confirmation">
                       </div>
                         <!-- <button type="submit" class="login p-2" (click)="enviar()" [disabled]="!formulario.valid">Criar conta</button> -->
-                        <button type="submit" class="login p-2" (click)="enviar()">Criar conta</button>
+                        <button class="login p-2" (click)="enviar()">Criar conta</button>
                     </form>
                 </mat-card-content>
               </mat-card>
