--- a/paraibike/src/app/components/login/enter/enter.component.html
+++ b/paraibike/src/app/components/login/enter/enter.component.html
@@ -21,7 +21,7 @@
                         <div class="input-group input-group-sm mb-3 input-color">
                             <input type="password" class="form-control" placeholder="Password" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="password"> 
                         </div>
-                        <button type="submit" class="login p-2" (click)="enviar()">LOGIN</button>
+                        <button class="login p-2" (click)="enviar()">LOGIN</button>
                         <button (click)="criarConta()" class="criarConta">Looking to create an account ? </button>
                     </form>
                 </mat-card-content>
