--- a/paraibike/src/app/components/bicicleta/cadastro-bicicleta/cadastro-bicicleta.component.html
+++ b/paraibike/src/app/components/bicicleta/cadastro-bicicleta/cadastro-bicicleta.component.html
@@ -7,10 +7,10 @@
                 <mat-card-header>
                   <mat-card-title>Cadastrar Bicicleta</mat-card-title>
                 </mat-card-header>
-                <mat-card-content>        
-                    <form class="example-form">
+                <mat-card-content>
+                    <form class="example-form" [formGroup]="formulario">
                         <div class="input-group input-group-sm mb-3 mt-4 input-color">
-                          <input type="text" class="form-control" placeholder="Código" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" 
+                          <input type="text" class="form-control" placeholder="Código" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"
                           formControlName="codigo" required>
                         </div>
                         <div class="input-group input-group-sm mb-3 mt-4 input-color">
@@ -20,8 +20,8 @@
                             <input type="text" class="form-control" placeholder="Estado" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" formControlName="estado" required>
                         </div>
                         <div class="d-flex align-items-center">
-                            <button type="submit" class="cancelar p-2" (click)="cancelar()">Cancelar</button>
-                            <button type="submit" class="login p-2" (click)="enviar()">Enviar</button>
+                            <button class="cancelar p-2" (click)="cancelar()">Cancelar</button>
+                            <button class="login p-2" (click)="enviar()">Enviar</button>
                         </div>
                     </form>
                 </mat-card-content>
