Ajustando telas de cadastro de aluguéis e bicicletas

--- a/front/paraibike/src/app/app.component.html
+++ b/front/paraibike/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-sidebar *ngIf="token">
+<app-sidebar>
   <div class="container-fluid"> 
      <div class="row">
         <div class="col-md-12">
@@ -7,4 +7,4 @@
      </div>
   </div>
 </app-sidebar>
-<router-outlet *ngIf="!token"></router-outlet>
+<router-outlet></router-outlet>
