--- a/front/paraibike/src/app/components/bicicleta/cadastro-bicicleta/cadastro-bicicleta.component.html
+++ b/front/paraibike/src/app/components/bicicleta/cadastro-bicicleta/cadastro-bicicleta.component.html
@@ -20,6 +20,10 @@
                 <input type="text" class="form-control" placeholder="Estado" aria-label="Sizing example input"
                   aria-describedby="inputGroup-sizing-sm" formControlName="estado" required>
               </div>
+              <div class="input-group input-group-sm mb-3 mt-4 input-color">
+                <input type="number" class="form-control" placeholder="Valor por hora (R$)" aria-label="Sizing example input"
+                  aria-describedby="inputGroup-sizing-sm" formControlName="valorPorHora" required>
+              </div>
               <div class="d-flex align-items-center justify-content-center">
                 <button class="btn btn-secondary m-2" (click)="cancelar()">Cancelar</button>
                 <button class="btn btn-primary m-2" (click)="enviar()">Enviar</button>
