fix: system auth

--- a/front/paraibike/src/app/components/login/login.component.html
+++ b/front/paraibike/src/app/components/login/login.component.html
@@ -9,8 +9,8 @@
 					<hr />
 					<form class="example-form" [formGroup]="formulario">
 						<div class="input-group input-group-sm mb-3 mt-4 input-color">
-							<input type="text" class="form-control" placeholder="Username" aria-label="Sizing example input"
-								aria-describedby="inputGroup-sizing-sm" formControlName="username">
+							<input type="text" class="form-control" placeholder="Email" aria-label="Sizing example input"
+								aria-describedby="inputGroup-sizing-sm" formControlName="email">
 						</div>
 						<div class="input-group input-group-sm mb-3 input-color">
 							<input type="password" class="form-control" placeholder="Password" aria-label="Sizing example input"
